<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="2dp"
    android:layout_margin="5dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:textSize="13sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            tools:text="title"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/txt_name_label"
            app:layout_constraintTop_toTopOf="@id/txt_name_label"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_label"
            app:layout_constraintStart_toStartOf="@+id/txt_name_label"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/txt_name"
            app:layout_constraintTop_toTopOf="@id/txt_city_label"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_about_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="13sp"
            tools:text= ""
            app:layout_constraintTop_toBottomOf="@+id/txt_gender_label"
            app:layout_constraintStart_toStartOf="@+id/txt_gender_label"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            tools:text="Male"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txt_release_date"
            app:layout_constraintStart_toStartOf="@+id/txt_release_date"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primarytype"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_city_label"
            app:layout_constraintStart_toStartOf="@+id/txt_city_label"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>